feat(EmailService, UserAuthServiceImpl, welcome/request/response-notification.html): add sendWelcomeNotification method and welcome template and review emails format

--- a/src/main/resources/templates/request-notification.html
+++ b/src/main/resources/templates/request-notification.html
@@ -65,7 +65,7 @@
     <p class="footer">
         Thank you for being part of our mentoring community!<br/>
         Best regards,<br/>
-        The FemCoders Team
+        The FemCoders Team 💜
     </p>
 </div>
 </body>
