fix(welcome-notification.html): fix username error

--- a/src/main/resources/templates/welcome-notification.html
+++ b/src/main/resources/templates/welcome-notification.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <div class="email-container">
-    <h1 th:text="'Welcome to FemCoders Mentor Hub, ' + ${userName} + '!'">Welcome to FemCoders Mentor Hub!</h1>
+    <h1 th:text="'Welcome to FemCoders Mentor Hub, ' + ${username} + '!'">Welcome to FemCoders Mentor Hub!</h1>
     <p>Thank you for joining our community of mentors and mentees. Here you can connect, learn, and share experiences that foster growth for everyone.</p>
     <p>With your account, you can:</p>
     <ul>
